update EditNoteActivity with editText field and others

--- a/app/src/main/res/menu/main_page_menu.xml
+++ b/app/src/main/res/menu/main_page_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_about"
         android:icon="@android:drawable/ic_menu_help"
         android:title="@string/about"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_add"
         android:icon="@android:drawable/ic_menu_add"
