--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -4,26 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNoteActivity">
+    android:background="#2196F3"
+    tools:context=".EditNoteActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/titleField"
-        android:layout_width="367dp"
-        android:layout_height="53dp"
+        android:layout_width="394dp"
+        android:layout_height="58dp"
         android:layout_marginTop="16dp"
-        android:text="enter title here"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:gravity="start|top"
+        android:importantForAutofill="no"
+        android:inputType="textMultiLine"
+        android:labelFor="@id/contentField"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/contentField"
-        android:layout_width="369dp"
+        android:layout_width="394dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:gravity="start|top"
+        android:importantForAutofill="no"
+        android:inputType="textMultiLine"
+        android:labelFor="@id/titleField"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/titleField"
         app:layout_constraintStart_toStartOf="@+id/titleField"
-        app:layout_constraintTop_toBottomOf="@+id/titleField" />
+        app:layout_constraintTop_toBottomOf="@+id/titleField"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
