add date attribute to note for comparison

--- a/app/src/main/res/layout/note_list_entry.xml
+++ b/app/src/main/res/layout/note_list_entry.xml
@@ -10,6 +10,7 @@
         android:layout_width="381dp"
         android:layout_height="25dp"
         android:layout_marginTop="8dp"
+        android:singleLine="true"
         android:text="@string/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +31,7 @@
         android:layout_height="62dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:scrollbars="vertical"
         android:text="@string/content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
