--- a/app/src/main/res/layout/note_list_entry.xml
+++ b/app/src/main/res/layout/note_list_entry.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:background="#FF9800">
 
     <TextView
         android:id="@+id/title"
@@ -12,6 +14,8 @@
         android:layout_marginTop="8dp"
         android:singleLine="true"
         android:text="@string/title"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +35,6 @@
         android:layout_height="62dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:scrollbars="vertical"
         android:text="@string/content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
