replace drawable button icon apply note title restriction add about page

--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2196F3"
+    android:background="#FF5722"
     tools:context=".EditNoteActivity">
 
     <EditText
         android:id="@+id/titleField"
-        android:layout_width="394dp"
-        android:layout_height="58dp"
+        android:layout_width="387dp"
+        android:layout_height="38dp"
         android:layout_marginTop="16dp"
-        android:background="#FFFFFF"
+        android:background="#FFC107"
         android:ems="10"
         android:gravity="start|top"
         android:importantForAutofill="no"
-        android:inputType="textMultiLine"
+        android:inputType="text"
         android:labelFor="@id/contentField"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#FFFFFF"
+        android:background="#FFC107"
         android:ems="10"
         android:gravity="start|top"
         android:importantForAutofill="no"
