--- a/app/src/main/res/menu/adding_page_save_menu.xml
+++ b/app/src/main/res/menu/adding_page_save_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_save"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/baseline_save_white_36"
         android:title="@string/save"
         app:showAsAction="always" />
 </menu>
