--- a/app/src/main/res/menu/main_page_menu.xml
+++ b/app/src/main/res/menu/main_page_menu.xml
@@ -4,12 +4,12 @@
 
     <item
         android:id="@+id/menu_about"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@drawable/baseline_help_white_36"
         android:title="@string/about"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_add"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/baseline_note_add_white_36"
         android:title="@string/add"
         app:showAsAction="always" />
 </menu>
